<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:autofillHints=""
        android:fontFamily="@font/work_sans_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="t@t.com"
        android:textAlignment="center"></EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_below="@+id/editTextEmail"
        android:fontFamily="@font/work_sans_bold"
        android:hint="@string/password"
        android:text="test1234"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:autofillHints=""></EditText>
    
    <TextView
        android:id="@+id/dummyViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/dummyViewLogin"
        android:layout_below="@id/editTextPassword"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/login"></Button>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dummyViewLogin"
        android:layout_below="@id/editTextPassword"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/sign_up"></Button>

</RelativeLayout>